--- a/plugins/GAMMUPlugin/templates/gammuoutboxlist.html
+++ b/plugins/GAMMUPlugin/templates/gammuoutboxlist.html
@@ -15,6 +15,7 @@
 		<COL style="width: 10%;">
 		<COL style="width: 60%;">
 		<COL style="width: 10%;">
+		<COL style="width: 10%;">
 		<COL style="width: 5%;">
 		<COL style="width: 1%;">
 	</COLGROUP>
@@ -92,7 +93,7 @@
 	</TR>
 	{foreachelse}
 	<TR>
-		<TD colspan="3" class="empty-table">
+		<TD colspan="6" class="empty-table">
 			<p>{trans("No messages found in database.")}</p>
 		</TD>
 	</TR>
